fix small bug add more complex case for function calling

--- a/examples/function_calling_with_arguments.ipynb
+++ b/examples/function_calling_with_arguments.ipynb
@@ -110,27 +110,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "situation = \"\"\"I need today's stock price of APPLE\"\"\"\n",
+    "def google_search(query: str, num_results: int = 10, language: str = Literal[\"en\", \"de\"]):\n",
+    "    print(\"google_search\\n\")\n",
+    "    for k, v in locals().items():\n",
+    "        print(k, \":\", v)\n",
     "\n",
     "\n",
-    "def google_search(text: str):\n",
-    "    print(f\"search {text} in google\")\n",
+    "def hackernews_search(query: str, num_results: int = 10, sort_by: str = Literal[\"popularity\", \"publish date\"]):\n",
+    "    print(\"hackernews_search\\n\")\n",
+    "    for k, v in locals().items():\n",
+    "        print(k, \":\", v)\n",
     "\n",
     "\n",
-    "def hackernews_search(text: str):\n",
-    "    print(f\"search {text} in hackernews\")\n",
+    "def write_email(sender: str, recipient: str, subject: str, body: str):\n",
+    "    print(\"write_email\\n\")\n",
+    "    for k, v in locals().items():\n",
+    "        print(k, \":\", v)\n",
+    "\n",
+    "\n",
+    "def database_query(table_name: str, columns: List[str], limit: int):\n",
+    "    print(\"database_query\\n\")\n",
+    "    for k, v in locals().items():\n",
+    "        print(k, \":\", v)\n",
     "\n",
     "\n",
     "functions = [\n",
     "    Function(\n",
+    "        func=database_query,\n",
+    "        func_description=\"Perform a query on a database table.\",\n",
+    "        arg_description=\"\"\"\n",
+    "- table_name (str): The name of the database table to query.\n",
+    "- columns (list, optional): A list of column names to retrieve. If None, all columns are selected.\n",
+    "- limit (int, optional): Limit the number of rows returned by the query.\n",
+    "\"\"\",\n",
+    "    ),\n",
+    "    Function(\n",
     "        func=google_search,\n",
-    "        func_description=\"search via google search engine\",\n",
-    "        arg_description=\"- text: string, text used for search in google\",\n",
+    "        func_description=\"Perform a Google search and retrieve relevant results.\",\n",
+    "        arg_description=\"\"\"\n",
+    "- query (str): The search query to be executed on Google.\n",
+    "- num_results (int, optional): The number of search results to retrieve (default is 10).\n",
+    "- language (str, optional): The language in which the search results should be displayed (default is \"en\").\n",
+    "\"\"\",\n",
     "    ),\n",
     "    Function(\n",
     "        func=hackernews_search,\n",
-    "        func_description=\"search in hackernews forum\",\n",
-    "        arg_description=\"- text: string, text used for search in hackernews\",\n",
+    "        func_description=\"Search for relevant articles on Hacker News based on a query.\",\n",
+    "        arg_description=\"\"\"\n",
+    "- query (str): The search query to find relevant articles on Hacker News.\n",
+    "- num_results (int, optional): The number of search results to retrieve (default is 10).\n",
+    "- sort_by (str, optional): The criteria for sorting the search results ('popularity' or 'date').\n",
+    "\"\"\",\n",
+    "    ),\n",
+    "    Function(\n",
+    "        func=write_email,\n",
+    "        func_description=\"Compose and send an email using Python.\",\n",
+    "        arg_description=\"\"\"\n",
+    "- sender (str): The email address of the sender.\n",
+    "- recipient (str): The email address of the recipient.\n",
+    "- subject (str): The subject of the email.\n",
+    "- body (str): The main content of the email.\n",
+    "\"\"\",\n",
     "    ),\n",
     "]"
    ]
@@ -159,11 +199,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search Apple Inc. stock price in google\n"
+      "database_query\n",
+      "\n",
+      "table_name : my_table\n",
+      "columns : ['column1', 'column2']\n",
+      "limit : 100000\n"
      ]
     }
    ],
    "source": [
+    "situation = \"\"\"Give me list of my top customer.\"\"\"\n",
+    "\n",
+    "func = choose_function(\n",
+    "    situation=situation,\n",
+    "    functions=functions\n",
+    ")\n",
+    "kwargs = build_function_argument(\n",
+    "    situation=situation,\n",
+    "    function=func\n",
+    ")\n",
+    "func.func(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "database_query\n",
+      "\n",
+      "table_name : stock_prices\n",
+      "columns : ['date', 'open', 'high', 'low', 'close']\n",
+      "limit : 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "situation = \"\"\"I need today's stock price of APPLE\"\"\"\n",
+    "\n",
+    "func = choose_function(\n",
+    "    situation=situation,\n",
+    "    functions=functions\n",
+    ")\n",
+    "kwargs = build_function_argument(\n",
+    "    situation=situation,\n",
+    "    function=func\n",
+    ")\n",
+    "func.func(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "database_query\n",
+      "\n",
+      "table_name : users\n",
+      "columns : ['id', 'name', 'email']\n",
+      "limit : 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "situation = \"\"\"What is the most popular hackernews article today?\"\"\"\n",
+    "\n",
     "func = choose_function(\n",
     "    situation=situation,\n",
     "    functions=functions\n",
